added unittests removed redunant code
